悬浮窗与无障碍优化

--- a/CommonAccessibility/src/main/res/layout/com_bihe0832_accessibility_position.xml
+++ b/CommonAccessibility/src/main/res/layout/com_bihe0832_accessibility_position.xml
@@ -11,10 +11,10 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:gravity="center"
-        android:textColor="@color/textColorPrimary"
+        android:textColor="@color/icons"
         android:textSize="16dp"
         android:textStyle="bold"
-        app:bgtv_backgroundColor="@color/bihe0832_common_toast_background_color"
+        app:bgtv_backgroundColor="@color/transparent_background"
         app:bgtv_isRadiusHalfHeight="true"
         app:bgtv_isWidthHeightEqual="true"
         app:layout_constraintBottom_toBottomOf="parent"
