关于我们作者信息可配置

--- a/CommonAbout/src/main/res/layout/about_layout.xml
+++ b/CommonAbout/src/main/res/layout/about_layout.xml
@@ -16,6 +16,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/app_about_toolbar"
             style="@style/AAF.AppTheme.Toolbar.Light"
+            tools:layout_height="30dp"
             app:title="@string/about" />
 
 
