--- a/LibNotification/src/main/res/layout/com_bihe0832_refresh_notification.xml
+++ b/LibNotification/src/main/res/layout/com_bihe0832_refresh_notification.xml
@@ -43,7 +43,7 @@
         android:singleLine="true"
         android:textSize="14dp"
         android:textStyle="bold"
-        tools:text="腾讯手游加速器正为您加速" />
+        tools:text="这是一个标题" />
 
     <TextView
         android:id="@+id/refresh_notification_desc"
