--- a/CommonMessage/src/main/res/layout/message_item_layout.xml
+++ b/CommonMessage/src/main/res/layout/message_item_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.bihe0832.android.lib.ui.custom.view.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.bihe0832.android.lib.ui.custom.view.slide.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/message_layout"
@@ -111,4 +111,4 @@
         android:textSize="14dp"
         android:textStyle="bold" />
 
-</com.bihe0832.android.lib.ui.custom.view.SwipeMenuLayout>
+</com.bihe0832.android.lib.ui.custom.view.slide.SwipeMenuLayout>
