--- a/Framework/src/main/res/values/common_string.xml
+++ b/Framework/src/main/res/values/common_string.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">子勰Lib</string>
-    <string name="app_desc">安卓开发组件 - 子勰</string>
+    <string name="app_desc">潜心学技术，努力做精品</string>
     <string name="router_schema">zixie</string>
 
     <string name="feedback_qq">2217661422</string>
