调试Widget 细节优化完善

--- a/CommonDebug/src/main/res/layout/com_bihe0832_debug_widget_device.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_debug_widget_device.xml
@@ -36,13 +36,13 @@
             tools:text="设备标识：ce5c98e5dab24476" />
 
         <TextView
-            android:id="@+id/widget_text_manufa"
+            android:id="@+id/widget_text_manufacturer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textColor="@color/textColorPrimary"
             android:textSize="12dp"
-            tools:text="厂商型号： HUAWEI, TNY-AL00, HONOR" />
+            android:text="@string/common_debug_empty_tips" />
 
         <TextView
             android:id="@+id/widget_text_os"
