--- a/CommonDebug/src/main/res/layout/com_bihe0832_debug_widget_detail.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_debug_widget_detail.xml
@@ -90,7 +90,7 @@
             android:textColor="@color/textColorPrimary"
             android:textSize="12dp"
             android:textStyle="bold"
-            tools:text="安装时间：2023-06-12 15:12:31" />
+            android:text="@string/common_debug_empty_tips" />
 
         <TextView
             android:id="@+id/widget_text_deviceid"
@@ -112,7 +112,7 @@
             tools:text="版本标识：Tag_ZIXIE_1.0.0_1" />
 
         <TextView
-            android:id="@+id/widget_text_manufa"
+            android:id="@+id/widget_text_manufacturer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
