--- a/LibLockScreen/src/main/res/values/com_bihe0832_base_lockscreen_widgets_string.xml
+++ b/LibLockScreen/src/main/res/values/com_bihe0832_base_lockscreen_widgets_string.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="com_bihe0832_widgets_process_name">:widget</string>
+    <string name="com_bihe0832_lock_screen_process_name">:lockscreen</string>
 </resources>
