--- a/CommonDebug/src/main/res/layout/com_bihe0832_debug_widget_simple.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_debug_widget_simple.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:lineHeight="16dp"
-            android:textColor="@color/textColorPrimary"
+            android:textColor="@color/bihe0832_common_toast_text_color"
             android:textSize="12dp"
             tools:text="应用名称：子勰Lib" />
 
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:textColor="@color/textColorPrimary"
+            android:textColor="@color/bihe0832_common_toast_text_color"
             android:textSize="12dp"
             android:text="@string/common_debug_empty_tips" />
 
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:textColor="@color/textColorPrimary"
+            android:textColor="@color/bihe0832_common_toast_text_color"
             android:textSize="12dp"
             android:textStyle="bold"
             tools:text="安装于 2023-06-12 15:12:31" />
