--- a/CommonDebug/src/main/res/xml/com_bihe0832_debug_widget_detail.xml
+++ b/CommonDebug/src/main/res/xml/com_bihe0832_debug_widget_detail.xml
@@ -3,7 +3,7 @@
     android:initialLayout="@layout/com_bihe0832_debug_widget_detail"
     android:minWidth="250dp"
     android:minHeight="110dp"
-    android:previewImage="@drawable/icon_info"
+    android:previewImage="@mipmap/widget_detail"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000" />
 
