--- a/CommonDebug/src/main/res/xml/com_bihe0832_debug_widget_simple.xml
+++ b/CommonDebug/src/main/res/xml/com_bihe0832_debug_widget_simple.xml
@@ -3,7 +3,7 @@
     android:initialLayout="@layout/com_bihe0832_debug_widget_simple"
     android:minWidth="250dp"
     android:minHeight="50dp"
-    android:previewImage="@drawable/icon_info"
+    android:previewImage="@mipmap/widget_simple"
     android:resizeMode="horizontal"
     android:updatePeriodMillis="1800000" />
 
