--- a/LibWidget/src/main/res/layout/com_bihe0832_widget_select_item.xml
+++ b/LibWidget/src/main/res/layout/com_bihe0832_widget_select_item.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <View
+        android:id="@+id/widget_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/divider" />
@@ -18,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
