--- a/CommonAbout/src/main/res/layout/card_setting.xml
+++ b/CommonAbout/src/main/res/layout/card_setting.xml
@@ -38,7 +38,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="12dp"
             android:ellipsize="end"
             android:textColor="@color/textColorPrimary"
             android:maxLines="1"
@@ -53,7 +53,7 @@
             android:id="@+id/settings_tips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="12dp"
+            android:layout_marginRight="6dp"
             android:textColor="@color/colorAccent"
             android:textSize="14dp"
             android:visibility="visible"
@@ -70,6 +70,7 @@
             app:bgtv_isRadiusHalfHeight="true"
             app:bgtv_strokeColor="@color/red_dot"
             app:bgtv_strokeWidth="1dp"
+            tools:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/settings_go"
             app:layout_constraintTop_toTopOf="parent" />
@@ -83,6 +84,7 @@
             android:src="@drawable/icon_right"
             app:tint="@color/textColorPrimary"
             android:visibility="visible"
+            tools:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
