--- a/CommonAbout/src/main/res/values/about_res.xml
+++ b/CommonAbout/src/main/res/values/about_res.xml
@@ -2,7 +2,9 @@
 
     <string name="about">关于我们</string>
     <string name="author">ZIXIE</string>
+    <string name="about_app">@string/app_name</string>
 
+    <string name="settings_message_title">消息中心</string>
     <string name="settings_update_title">版本更新</string>
     <string name="settings_update_tips">发现新版本</string>
 
