--- a/CommonShare/src/main/res/layout/common_activity_share_qrcode.xml
+++ b/CommonShare/src/main/res/layout/common_activity_share_qrcode.xml
@@ -96,31 +96,58 @@
             android:gravity="bottom"
             android:orientation="horizontal">
 
-            <TextView
+            <LinearLayout
                 android:id="@+id/share_apk_panel_send_source"
-                style="@style/shareItemText"
-                android:drawableTop="@drawable/icon_apk"
-                android:text="分享APK"
-                android:visibility="gone" />
+                style="@style/shareItem">
 
-            <TextView
+                <ImageView
+                    style="@style/shareItemImage"
+                    android:src="@drawable/icon_android" />
+
+                <TextView
+                    style="@style/shareItemText"
+                    android:text="分享APK" />
+            </LinearLayout>
+
+
+            <LinearLayout
                 android:id="@+id/share_qrcode_panel_send"
-                style="@style/shareItemText"
-                android:drawableTop="@drawable/icon_send"
-                android:text="分享二维码" />
+                style="@style/shareItem">
 
-            <TextView
+                <ImageView
+                    style="@style/shareItemImage"
+                    android:src="@drawable/icon_send" />
+
+                <TextView
+                    style="@style/shareItemText"
+                    android:text="分享二维码" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/share_qrcode_panel_download"
-                style="@style/shareItemText"
-                android:drawableTop="@drawable/icon_save"
-                android:text="保存二维码" />
+                style="@style/shareItem">
 
-            <TextView
+                <ImageView
+                    style="@style/shareItemImage"
+                    android:src="@drawable/icon_download" />
+
+                <TextView
+                    style="@style/shareItemText"
+                    android:text="保存二维码" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/share_qrcode_panel_link"
-                style="@style/shareItemText"
-                android:drawableTop="@drawable/icon_copy"
-                android:text="分享链接" />
+                style="@style/shareItem">
 
+                <ImageView
+                    style="@style/shareItemImage"
+                    android:src="@drawable/icon_link" />
+
+                <TextView
+                    style="@style/shareItemText"
+                    android:text="分享链接" />
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
