--- a/CommonAceEditor/src/main/res/layout/activity_edit_layout.xml
+++ b/CommonAceEditor/src/main/res/layout/activity_edit_layout.xml
@@ -19,7 +19,7 @@
             android:layout_width="48dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
-            android:src="@drawable/icon_more" />
+            android:src="@drawable/ic_more" />
     </androidx.appcompat.widget.Toolbar>
 
     <FrameLayout
