--- a/CommonMessage/src/main/res/layout/message_item_layout.xml
+++ b/CommonMessage/src/main/res/layout/message_item_layout.xml
@@ -79,7 +79,7 @@
             android:layout_height="16dp"
             android:layout_marginRight="8dp"
             android:layout_centerVertical="true"
-            android:src="@drawable/icon_right"
+            android:src="@drawable/ic_right_go"
             app:tint="@color/com_bihe0832_message_item_title_color"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/message_icon"
