--- a/CommonQRCode/src/main/res/layout/common_bihe0832_qrcode_activity_scanner.xml
+++ b/CommonQRCode/src/main/res/layout/common_bihe0832_qrcode_activity_scanner.xml
@@ -23,7 +23,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="@dimen/toolbar_padding_top"
             android:scaleType="centerInside"
-            android:src="@drawable/icon_left_arrow"
+            android:src="@drawable/ic_left_arrow"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
