--- a/CommonShare/src/main/res/layout/common_activity_share.xml
+++ b/CommonShare/src/main/res/layout/common_activity_share.xml
@@ -49,41 +49,86 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <TextView
+
+            <LinearLayout
                 android:id="@+id/BaseShareToWeChatBtn"
-                style="@style/shareItemText"
-                android:drawableTop="@mipmap/share_wechat"
-                android:text="微信" />
+                style="@style/shareItem">
 
-            <TextView
+                <ImageView
+                    style="@style/shareItemImage"
+                    android:src="@drawable/icon_wechat" />
+
+                <TextView
+                    style="@style/shareItemText"
+                    android:text="微信" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/BaseShareToFriendsBtn"
-                style="@style/shareItemText"
-                android:drawableTop="@mipmap/share_timeline"
-                android:text="朋友圈" />
+                style="@style/shareItem">
 
-            <TextView
+                <ImageView
+                    style="@style/shareItemImage"
+                    android:src="@drawable/icon_timeline" />
+
+                <TextView
+                    style="@style/shareItemText"
+                    android:text="朋友圈" />
+            </LinearLayout>
+
+
+            <LinearLayout
                 android:id="@+id/BaseShareToQQBtn"
-                style="@style/shareItemText"
-                android:drawableTop="@mipmap/share_qq"
-                android:text="QQ" />
+                style="@style/shareItem">
 
-            <TextView
+                <ImageView
+                    style="@style/shareItemImage"
+                    android:src="@drawable/icon_qq" />
+
+                <TextView
+                    style="@style/shareItemText"
+                    android:text="QQ" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/BaseShareToQzoneBtn"
-                style="@style/shareItemText"
-                android:drawableTop="@mipmap/share_qzone"
-                android:text="QQ空间" />
+                style="@style/shareItem">
 
-            <TextView
+                <ImageView
+                    style="@style/shareItemImage"
+                    android:src="@drawable/icon_qzone" />
+
+                <TextView
+                    style="@style/shareItemText"
+                    android:text="QQ空间" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/BaseShareLinkBtn"
-                style="@style/shareItemText"
-                android:drawableTop="@mipmap/share_link"
-                android:text="复制链接" />
+                style="@style/shareItem">
 
-            <TextView
+                <ImageView
+                    style="@style/shareItemImage"
+                    android:src="@drawable/icon_link" />
+
+                <TextView
+                    style="@style/shareItemText"
+                    android:text="复制链接" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/BaseShareDownloadBtn"
-                style="@style/shareItemText"
-                android:drawableTop="@mipmap/share_download"
-                android:text="保存图片" />
+                style="@style/shareItem">
+
+                <ImageView
+                    style="@style/shareItemImage"
+                    android:src="@drawable/icon_download_fill" />
+
+                <TextView
+                    style="@style/shareItemText"
+                    android:text="保存图片" />
+            </LinearLayout>
+
 
         </LinearLayout>
     </LinearLayout>
