--- a/LibAAFResource/src/main/res/drawable/icon_praise.xml
+++ b/LibAAFResource/src/main/res/drawable/icon_praise.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="@color/icons"
-        android:pathData="M2,20h2c0.55,0 1,-0.45 1,-1v-9c0,-0.55 -0.45,-1 -1,-1L2,9v11zM21.83,12.88c0.11,-0.25 0.17,-0.52 0.17,-0.8L22,11c0,-1.1 -0.9,-2 -2,-2h-5.5l0.92,-4.65c0.05,-0.22 0.02,-0.46 -0.08,-0.66 -0.23,-0.45 -0.52,-0.86 -0.88,-1.22L14,2 7.59,8.41C7.21,8.79 7,9.3 7,9.83v7.84C7,18.95 8.05,20 9.34,20h8.11c0.7,0 1.36,-0.37 1.72,-0.97l2.66,-6.15z" />
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+  <path
+      android:fillColor="@color/icons"
+      android:pathData="M64,483V872c0,37.2 30.1,67.4 67.4,67.4H192V416.3l-60.6,-0.6A67.4,67.4 0,0 0,64 483zM857.3,345l-267.8,1.7c12.6,-44.3 18.9,-83.6 18.9,-118.2 0,-78.6 -68.8,-155.5 -137.6,-145.5 -60.6,8.8 -67.3,61.2 -67.3,126.8v59.3c0,76.1 -63.8,140.9 -137.9,148L256,417v522.4h527.6a102.7,102.7 0,0 0,100.9 -83.6l73.7,-389a102.7,102.7 0,0 0,-100.9 -121.8z"/>
 </vector>
