--- a/LibNotification/src/main/res/layout/com_bihe0832_download_notification.xml
+++ b/LibNotification/src/main/res/layout/com_bihe0832_download_notification.xml
@@ -31,7 +31,9 @@
             android:paddingTop="3dp"
             android:singleLine="true"
             android:text=""
+            android:textColor="@color/textColorPrimary"
             android:textSize="14dp"
+            tools:text="下载标题"
             android:textStyle="bold" />
 
         <TextView
@@ -41,6 +43,7 @@
             android:layout_below="@id/download_notification_title"
             android:layout_marginTop="5dp"
             android:text="2333KB/s"
+            android:textColor="@color/textColorSecondary"
             android:textSize="10dp" />
 
         <TextView
@@ -50,6 +53,7 @@
             android:layout_below="@id/download_notification_title"
             android:layout_alignParentRight="true"
             android:layout_marginTop="5dp"
+            android:textColor="@color/textColorSecondary"
             android:text="233.3MB/1.8GB"
             android:textSize="10dp" />
 
@@ -85,7 +89,8 @@
             android:paddingRight="5dp"
             android:paddingBottom="10dp"
             android:scaleType="centerInside"
-            tools:src="@mipmap/btn_pause" />
+            android:tint="@color/colorAccent"
+            tools:src="@drawable/ic_pause_fill" />
 
         <ImageButton
             android:id="@+id/download_notification_btn_cancel"
@@ -98,6 +103,7 @@
             android:paddingRight="5dp"
             android:paddingBottom="10dp"
             android:scaleType="centerInside"
-            tools:src="@mipmap/btn_cancel" />
+            android:tint="@color/colorAccent"
+            tools:src="@drawable/ic_close_fill" />
     </LinearLayout>
 </RelativeLayout>
