--- a/CommonAbout/src/main/res/layout/card_setting.xml
+++ b/CommonAbout/src/main/res/layout/card_setting.xml
@@ -24,7 +24,7 @@
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:scaleType="centerInside"
-            android:src="@mipmap/icon"
+            android:src="@drawable/icon_android"
             app:tint="@color/textColorPrimary"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/settings_title"
