--- a/Framework/src/main/res/values/activity_theme.xml
+++ b/Framework/src/main/res/values/activity_theme.xml
@@ -75,9 +75,11 @@
         <!--控制所有可点击的View的涟漪效果颜色-->
         <item name="colorControlHighlight">@color/colorControlHighlight</item>
         <!--EditText 输入框中字体的颜色-->
-        <item name="editTextColor">@color/secondary_text</item>
-        <item name="android:textColorPrimary">@color/primary_text</item>
-        <item name="android:textColorSecondary">@color/secondary_text</item>
+        <item name="editTextColor">@color/textColorSecondary</item>
+
+        <item name="android:textColor">@color/textColorPrimary</item>
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+        <item name="android:textColorSecondary">@color/textColorSecondary</item>
         <!--支持刘海屏-->
         <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
     </style>
