--- a/LibAAFResource/src/main/res/values/com_bihe0832_base_permission_res.xml
+++ b/LibAAFResource/src/main/res/values/com_bihe0832_base_permission_res.xml
@@ -8,7 +8,7 @@
     <color name="permission_window_bg">@color/transparent_background</color>
     <color name="permission_tips_bg">@color/white</color>
     <color name="permission_tips_text_color">@color/com_bihe0832_dialog_content</color>
-    <color name="permission_tips_title_color">@color/com_bihe0832_dialog_title</color>
+    <color name="permission_tips_title_color">@color/black</color>
 
     <string name="com_bihe0832_permission_default_content">%s的%s功能需要手机授予%s权限，缺少权限有可能会影响功能的正常使用。</string>
 
