--- a/BaseDebug/src/main/res/layout/widget_layout_1.xml
+++ b/BaseDebug/src/main/res/layout/widget_layout_1.xml
@@ -3,12 +3,12 @@
     android:id="@+id/iv_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent_background"
+    android:background="@drawable/com_bihe0832_base_toast_corner"
     android:gravity="center">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/com_bihe0832_base_toast_corner"
         android:gravity="center"
