--- a/BaseDebug/src/main/res/xml/com_bihe0832_debug_widget_demo_1.xml
+++ b/BaseDebug/src/main/res/xml/com_bihe0832_debug_widget_demo_1.xml
@@ -4,7 +4,7 @@
     android:minWidth="120dp"
     android:minHeight="40dp"
     android:previewImage="@drawable/icon_android"
-    android:resizeMode="horizontal"
+    android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000">
 
 </appwidget-provider>
