Google 广告，插屏广告

--- a/BaseDebug/src/main/res/values/dialog_test_res.xml
+++ b/BaseDebug/src/main/res/values/dialog_test_res.xml
@@ -8,5 +8,6 @@
 
     <color name="text_color">#FF0000</color>
 
+    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
 
 </resources>
