--- a/ServicesGoogleAD/src/main/res/values/google_ad_res.xml
+++ b/ServicesGoogleAD/src/main/res/values/google_ad_res.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- https://support.google.com/admob/answer/7356431?hl=zh-Hans -->
-    <string name="admob_applicaion_id"></string>
+    <string name="admob_applicaion_id">ca-app-pub-3940256099942544~3347511713</string>
 </resources>
