--- a/LibDialog/src/main/res/layout/com_bihe0832_common_image_dialog.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_common_image_dialog.xml
@@ -5,9 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/transparent"
-    android:paddingLeft="32dp"
-    android:paddingTop="32dp"
-    android:paddingRight="32dp"
     android:paddingBottom="128dp">
 
     <ImageView
@@ -16,13 +13,20 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        tools:src="@mipmap/icon"
         android:visibility="visible"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@mipmap/icon" />
 
+    <View
+        android:id="@+id/dialog_button"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toBottomOf="@id/dialog_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
