--- a/LibAAFResource/src/main/res/values/com_bihe0832_base_dialog_res.xml
+++ b/LibAAFResource/src/main/res/values/com_bihe0832_base_dialog_res.xml
@@ -26,6 +26,7 @@
     <string name="dialog_color_button_reset">重置到初始值</string>
     <string name="dialog_color_title">当前颜色：</string>
     <string name="dialog_color_alpha_title">透明度：</string>
+    <string name="dialog_color_tips">上下滑动以浏览更多颜色设置选项</string>
     <dimen name="dialog_color_pick_size">160dp</dimen>
 
 </resources>
